add: exercicios de variaveis e strings

--- a/notebooks/01_Exercicios-Variaveis.ipynb
+++ b/notebooks/01_Exercicios-Variaveis.ipynb
@@ -25,8 +25,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatura = print(float(input(\"Digite a temperatura em graus Celsius: \")) * 1.8 + 32)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,10 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(float(input(\"Digite o valor em metros: \")) * 100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor em dólar:  18.181818181818183\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Valor em dólar: ',float(input(\"Digite o valor em reais: \")) / 5.5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ordep\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input(\"Digite uma string: \")[::-1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maior: 5\n",
+      "Menor: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = input(\"Digite uma lista de números separados por vírgula: \").split(',')\n",
+    "lista = [int(numero) for numero in lista]\n",
+    "print(f'Maior: {max(lista)}')\n",
+    "print(f'Menor: {min(lista)}')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,8 +166,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Não é palindromo\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input('Digite uma string: ')\n",
+    "print('É Palindromo' if string == string[::-1] else 'Não é palindromo')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -127,10 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python é incrivel\n"
+     ]
+    }
+   ],
+   "source": [
+    "string, palavra1, palavra2 = input('Digite uma string: ').split(',')\n",
+    "print(string.replace(palavra1, palavra2))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input('Digite uma string: ').isupper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,10 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(input('Digite uma string: ').split()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,10 +274,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pythonéincrivel\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input('Digite uma string: ').strip().replace(' ', ''))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,8 +303,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python é legal\n",
+      " python\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "string, palavra=  input('Digite uma string: ').split(',')\n",
+    "print(string.strip().startswith(palavra.strip()))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,10 +331,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python É Legal\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input('Digite uma string: ').title())\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,10 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PYTHON É LEGAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(input('Digite uma string: ').upper())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,22 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "legal python é\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\" \".join(sorted(input('Digite uma string: ').split())))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "pod_venv",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
